# NNcpp

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md
Debug/: NNcpp  makefile  sources.mk  tempfile.nn
Debug/src/: main.d  subdir.mk
Debug/src/nn_base/: Network.d  Neuron.d  functions.d  subdir.mk
Debug/src/nn_io/: NN_io.d  subdir.mk
Debug/src/nn_utils/: subdir.mk  utils.d
include/: NN_io.hpp  Network.hpp  Neuron.hpp  functions.hpp  network.hpp  neuron.hpp  nn_io.hpp  utils.hpp
src/: binaryAND.nn  binaryANDcopy.nn  main.cpp  tempfile.nn~  tempfilecopy.nn
src/data/: binaryAND.nn  binaryANDOR.nn  datafile.nn
src/nn_base/: Network.cpp  Neuron.cpp  functions.cpp  network.cpp  neuron.cpp
src/nn_io/: NN_io.cpp  nn_io.cpp
src/nn_utils/: utils.cpp
